# chiptool

./: .gitattributes  .gitignore  Cargo.toml  README.md  build.rs  lib.rs  rust-toolchain.toml
.github/: bors.toml
.github/ci/: build.sh
.github/workflows/: ci.yaml
src/: ir.rs  lib.rs  main.rs  svd2ir.rs  util.rs  validate.rs
src/commands/: check.rs  extract_all.rs  extract_peripheral.rs  fmt.rs  gen_block.rs  gen_common.rs  generate.rs  mod.rs  transform.rs
src/generate/: block.rs  common.rs  device.rs  enumm.rs  fieldset.rs  generic.rs  interrupt.rs  mod.rs  peripheral_instance.rs
src/generate/iface/: block.rs  common.rs  fieldset.rs  mod.rs
src/generate/mmio/: block.rs  common.rs  device.rs  enumm.rs  fieldset.rs  mod.rs
src/ir/: fieldset.rs
src/transform/: add.rs  add_dma_cluster_aliases.rs  add_enum_variants.rs  add_fields.rs  add_interrupts.rs  add_peripherals.rs  add_registers.rs  clean_descriptions.rs  common.rs  delete.rs  delete_enum_variants.rs  delete_enums.rs  delete_enums_used_in.rs  delete_enums_with_variants.rs  delete_fields.rs  delete_fieldsets.rs  delete_peripherals.rs  delete_registers.rs  delete_useless_enums.rs  expand_extends.rs  find_duplicate_enums.rs  find_duplicate_fieldsets.rs  fix_register_bit_sizes.rs  load_svd.rs  make_block.rs  make_cluster.rs  make_field_array.rs  make_register_array.rs  map_enum_variants.rs  merge_blocks.rs  merge_enums.rs  merge_fieldsets.rs  mod.rs  modify_byte_offset.rs  modify_fields_enum.rs  modify_registers.rs  rename.rs  rename_enum_variants.rs  rename_fields.rs  rename_fieldsets.rs  (+7 more)
svd/: rp2040.yaml
tests/: ARM_Example.svd  basic_commands.rs  map_enum_variants.rs  rename_dups.rs  svd2ir.rs
