[package]
name = "chiptool"
license = "MIT OR Apache-2.0"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
env_logger = "0.11.1"
inflections = "1.1"
log = { version = "~0.4", features = ["std"] }
quote = "1.0"
proc-macro2 = "1.0"
anyhow = "1.0.79"
regex = "1.10.3"
serde = { version = "1.0.196", features = [ "derive" ]}
svd-parser = { git = "https://github.com/Dirbaio/svd.git", rev = "8426f3bb40dd2391e26cd087a0d6510fe21fdcbc", features = ["derive-from", "expand"] }
#svd-parser = { path = "./svd/svd-parser", features = ["derive-from", "expand"] }
# Development has stopped for `serde_yaml`
serde_yaml = "=0.9.34-deprecated"
